--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,6 +27,7 @@
 
         "react-hooks/rules-of-hooks": "error",
         "react-hooks/exhaustive-deps": "warn",
+        "no-unused-expressions": "off",
 
         "no-use-before-define": "off",
         "@typescript-eslint/no-use-before-define": [
