--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,11 +24,10 @@
         "react/jsx-props-no-spreading": "off",
         "react/prop-types": "off",
         "@typescript-eslint/camelcase": "off",
-
+        "@typescript-eslint/ban-types": "off",
         "react-hooks/rules-of-hooks": "error",
         "react-hooks/exhaustive-deps": "warn",
         "no-unused-expressions": "off",
-
         "no-use-before-define": "off",
         "@typescript-eslint/no-use-before-define": [
             "error"
