--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-icons": "^4.3.1",
+        "react-router-dom": "^6.2.1",
         "react-scripts": "4.0.3",
+        "react-spring": "^9.4.2",
         "styled-components": "^5.3.3",
         "typescript": "^4.1.2",
         "uuidv4": "^6.2.12",
